first working loading

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "editable": true
    },
@@ -13,40 +13,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: student@sparkifydb'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql postgresql://student:student@127.0.0.1/sparkifydb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "%sql SELECT * FROM songplays WHERE artist_id is not None desc LIMIT 5;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "%sql SELECT * FROM users LIMIT 5;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -56,7 +45,71 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "11 rows affected.\n"
+      "(psycopg2.ProgrammingError) syntax error at or near \"None\"\n",
+      "LINE 1: SELECT * FROM songplays WHERE artist_id is not None desc LIM...\n",
+      "                                                       ^\n",
+      " [SQL: 'SELECT * FROM songplays WHERE artist_id is not None desc LIMIT 5;']\n"
+     ]
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM songplays LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>user_id</th>\n",
+       "        <th>first_name</th>\n",
+       "        <th>last_name</th>\n",
+       "        <th>gender</th>\n",
+       "        <th>level</th>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM users LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
      ]
     },
     {
@@ -77,93 +130,13 @@
        "        <td>2007</td>\n",
        "        <td>209.60608</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOIAZJW12AB01853F1</td>\n",
-       "        <td>Pink World</td>\n",
-       "        <td>AR8ZCNI1187B9A069B</td>\n",
-       "        <td>1984</td>\n",
-       "        <td>269.81832</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SONHOTT12A8C13493C</td>\n",
-       "        <td>Something Girls</td>\n",
-       "        <td>AR7G5I41187FB4CE6C</td>\n",
-       "        <td>1982</td>\n",
-       "        <td>233.40363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOCIWDW12A8C13D406</td>\n",
-       "        <td>Soul Deep</td>\n",
-       "        <td>ARMJAGH1187FB546F3</td>\n",
-       "        <td>1969</td>\n",
-       "        <td>148.03546</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOQHXMF12AB0182363</td>\n",
-       "        <td>Young Boy Blues</td>\n",
-       "        <td>ARGSJW91187B9B1D6B</td>\n",
-       "        <td>0</td>\n",
-       "        <td>218.77506</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOYMRWW12A6D4FAB14</td>\n",
-       "        <td>The Moon And I (Ordinary Day Album Version)</td>\n",
-       "        <td>ARKFYS91187B98E58F</td>\n",
-       "        <td>0</td>\n",
-       "        <td>267.7024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOUDSGM12AC9618304</td>\n",
-       "        <td>Insatiable (Instrumental Version)</td>\n",
-       "        <td>ARNTLGG11E2835DDB9</td>\n",
-       "        <td>0</td>\n",
-       "        <td>266.39628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOMJBYD12A6D4F8557</td>\n",
-       "        <td>Keepin It Real (Skit)</td>\n",
-       "        <td>ARD0S291187B9B7BF5</td>\n",
-       "        <td>0</td>\n",
-       "        <td>114.78159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOXVLOJ12AB0189215</td>\n",
-       "        <td>Amor De Cabaret</td>\n",
-       "        <td>ARKRRTF1187B9984DA</td>\n",
-       "        <td>0</td>\n",
-       "        <td>177.47546</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOMZWCG12A8C13C480</td>\n",
-       "        <td>I Didn&#x27;t Mean To</td>\n",
-       "        <td>ARD7TVE1187B99BFB1</td>\n",
-       "        <td>0</td>\n",
-       "        <td>218.93179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOHKNRJ12A6701D1F8</td>\n",
-       "        <td>Drop of Rain</td>\n",
-       "        <td>AR10USD1187B99F3F1</td>\n",
-       "        <td>0</td>\n",
-       "        <td>189.57016</td>\n",
-       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SOFSOCN12A8C143F5D', 'Face the Ashes', 'ARXR32B1187FB57099', 2007, 209.60608),\n",
-       " ('SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, 269.81832),\n",
-       " ('SONHOTT12A8C13493C', 'Something Girls', 'AR7G5I41187FB4CE6C', 1982, 233.40363),\n",
-       " ('SOCIWDW12A8C13D406', 'Soul Deep', 'ARMJAGH1187FB546F3', 1969, 148.03546),\n",
-       " ('SOQHXMF12AB0182363', 'Young Boy Blues', 'ARGSJW91187B9B1D6B', 0, 218.77506),\n",
-       " ('SOYMRWW12A6D4FAB14', 'The Moon And I (Ordinary Day Album Version)', 'ARKFYS91187B98E58F', 0, 267.7024),\n",
-       " ('SOUDSGM12AC9618304', 'Insatiable (Instrumental Version)', 'ARNTLGG11E2835DDB9', 0, 266.39628),\n",
-       " ('SOMJBYD12A6D4F8557', 'Keepin It Real (Skit)', 'ARD0S291187B9B7BF5', 0, 114.78159),\n",
-       " ('SOXVLOJ12AB0189215', 'Amor De Cabaret', 'ARKRRTF1187B9984DA', 0, 177.47546),\n",
-       " ('SOMZWCG12A8C13C480', \"I Didn't Mean To\", 'ARD7TVE1187B99BFB1', 0, 218.93179),\n",
-       " ('SOHKNRJ12A6701D1F8', 'Drop of Rain', 'AR10USD1187B99F3F1', 0, 189.57016)]"
+       "[('SOFSOCN12A8C143F5D', 'Face the Ashes', 'ARXR32B1187FB57099', 2007, 209.60608)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
