--- a/test.ipynb
+++ b/test.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
@@ -45,15 +45,97 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "(psycopg2.ProgrammingError) syntax error at or near \"None\"\n",
-      "LINE 1: SELECT * FROM songplays WHERE artist_id is not None desc LIM...\n",
-      "                                                       ^\n",
-      " [SQL: 'SELECT * FROM songplays WHERE artist_id is not None desc LIMIT 5;']\n"
+      "5 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>songplay_id</th>\n",
+       "        <th>start_time</th>\n",
+       "        <th>user_id</th>\n",
+       "        <th>level</th>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>session_id</th>\n",
+       "        <th>location</th>\n",
+       "        <th>user_agent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2266</td>\n",
+       "        <td>2018-11-21 21:56:47.796000</td>\n",
+       "        <td>15</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>SOZCTXZ12AB0182364</td>\n",
+       "        <td>AR5KOSW1187FB35FF4</td>\n",
+       "        <td>818</td>\n",
+       "        <td>Chicago-Naperville-Elgin, IL-IN-WI</td>\n",
+       "        <td>&quot;Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2018-11-13 03:19:02.796000</td>\n",
+       "        <td>9</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>379</td>\n",
+       "        <td>Eureka-Arcata-Fortuna, CA</td>\n",
+       "        <td>Mozilla/5.0 (Windows NT 6.1; WOW64; Trident/7.0; rv:11.0) like Gecko</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2018-11-13 03:51:52.796000</td>\n",
+       "        <td>49</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>506</td>\n",
+       "        <td>San Francisco-Oakland-Hayward, CA</td>\n",
+       "        <td>Mozilla/5.0 (Windows NT 5.1; rv:31.0) Gecko/20100101 Firefox/31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2018-11-13 01:12:29.796000</td>\n",
+       "        <td>51</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>510</td>\n",
+       "        <td>Houston-The Woodlands-Sugar Land, TX</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2018-11-13 05:00:06.796000</td>\n",
+       "        <td>94</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>492</td>\n",
+       "        <td>Ogden-Clearfield, UT</td>\n",
+       "        <td>Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2266, datetime.datetime(2018, 11, 21, 21, 56, 47, 796000), 15, 'paid', 'SOZCTXZ12AB0182364', 'AR5KOSW1187FB35FF4', 818, 'Chicago-Naperville-Elgin, IL-IN-WI', '\"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36\"'),\n",
+       " (3, datetime.datetime(2018, 11, 13, 3, 19, 2, 796000), 9, 'free', None, None, 379, 'Eureka-Arcata-Fortuna, CA', 'Mozilla/5.0 (Windows NT 6.1; WOW64; Trident/7.0; rv:11.0) like Gecko'),\n",
+       " (4, datetime.datetime(2018, 11, 13, 3, 51, 52, 796000), 49, 'free', None, None, 506, 'San Francisco-Oakland-Hayward, CA', 'Mozilla/5.0 (Windows NT 5.1; rv:31.0) Gecko/20100101 Firefox/31.0'),\n",
+       " (2, datetime.datetime(2018, 11, 13, 1, 12, 29, 796000), 51, 'free', None, None, 510, 'Houston-The Woodlands-Sugar Land, TX', '\"Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"'),\n",
+       " (5, datetime.datetime(2018, 11, 13, 5, 0, 6, 796000), 94, 'free', None, None, 492, 'Ogden-Clearfield, UT', 'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * FROM songplays LIMIT 5;"
+    "%sql SELECT * FROM songplays ORDER BY song_id LIMIT 5 ;\n",
+    "#%sql SELECT COUNT(*) FROM songplays;"
    ]
   },
   {
@@ -68,7 +150,9 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n",
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
      ]
     },
     {
@@ -76,16 +160,15 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>user_id</th>\n",
-       "        <th>first_name</th>\n",
-       "        <th>last_name</th>\n",
-       "        <th>gender</th>\n",
-       "        <th>level</th>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>96</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(96,)]"
       ]
      },
      "execution_count": 4,
@@ -94,7 +177,8 @@
     }
    ],
    "source": [
-    "%sql SELECT * FROM users LIMIT 5;"
+    "%sql SELECT * FROM users LIMIT 5;\n",
+    "%sql SELECT COUNT(*) FROM users;"
    ]
   },
   {
@@ -109,6 +193,8 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "71 rows affected.\n",
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
       "1 rows affected.\n"
      ]
     },
@@ -117,23 +203,15 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>song_id</th>\n",
-       "        <th>title</th>\n",
-       "        <th>artist_id</th>\n",
-       "        <th>year</th>\n",
-       "        <th>duration</th>\n",
+       "        <th>count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>SOFSOCN12A8C143F5D</td>\n",
-       "        <td>Face the Ashes</td>\n",
-       "        <td>ARXR32B1187FB57099</td>\n",
-       "        <td>2007</td>\n",
-       "        <td>209.60608</td>\n",
+       "        <td>71</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SOFSOCN12A8C143F5D', 'Face the Ashes', 'ARXR32B1187FB57099', 2007, 209.60608)]"
+       "[(71,)]"
       ]
      },
      "execution_count": 5,
@@ -142,29 +220,94 @@
     }
    ],
    "source": [
-    "%sql SELECT * FROM songs --LIMIT 5;"
+    "%sql SELECT * FROM songs --LIMIT 5;\n",
+    "%sql SELECT COUNT(*) FROM songs;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n",
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>69</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(69,)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM artists LIMIT 5;"
+    "%sql SELECT * FROM artists LIMIT 5;\n",
+    "%sql SELECT COUNT(*) FROM artists;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n",
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6813</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(6813,)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM time LIMIT 5;"
+    "%sql SELECT * FROM time LIMIT 5;\n",
+    "%sql SELECT COUNT(*) FROM time;"
    ]
   },
   {
