--- a/test.ipynb
+++ b/test.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -128,7 +128,7 @@
        " (5, datetime.datetime(2018, 11, 13, 5, 0, 6, 796000), 94, 'free', None, None, 492, 'Ogden-Clearfield, UT', 'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,9 +279,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "5 rows affected.\n",
-      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -289,15 +287,67 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>count</th>\n",
+       "        <th>start_time</th>\n",
+       "        <th>hour</th>\n",
+       "        <th>day</th>\n",
+       "        <th>week</th>\n",
+       "        <th>month</th>\n",
+       "        <th>year</th>\n",
+       "        <th>weekday</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>6813</td>\n",
+       "        <td>2018-11-13 00:40:37.796000</td>\n",
+       "        <td>0</td>\n",
+       "        <td>13</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-13 01:12:29.796000</td>\n",
+       "        <td>1</td>\n",
+       "        <td>13</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-13 03:19:02.796000</td>\n",
+       "        <td>3</td>\n",
+       "        <td>13</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-13 03:51:52.796000</td>\n",
+       "        <td>3</td>\n",
+       "        <td>13</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-13 05:00:06.796000</td>\n",
+       "        <td>5</td>\n",
+       "        <td>13</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>1</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(6813,)]"
+       "[(datetime.datetime(2018, 11, 13, 0, 40, 37, 796000), 0, 13, 46, 11, 2018, 1),\n",
+       " (datetime.datetime(2018, 11, 13, 1, 12, 29, 796000), 1, 13, 46, 11, 2018, 1),\n",
+       " (datetime.datetime(2018, 11, 13, 3, 19, 2, 796000), 3, 13, 46, 11, 2018, 1),\n",
+       " (datetime.datetime(2018, 11, 13, 3, 51, 52, 796000), 3, 13, 46, 11, 2018, 1),\n",
+       " (datetime.datetime(2018, 11, 13, 5, 0, 6, 796000), 5, 13, 46, 11, 2018, 1)]"
       ]
      },
      "execution_count": 7,
@@ -307,7 +357,7 @@
    ],
    "source": [
     "%sql SELECT * FROM time LIMIT 5;\n",
-    "%sql SELECT COUNT(*) FROM time;"
+    "#%sql SELECT COUNT(*) FROM time;"
    ]
   },
   {
