--- a/test.ipynb
+++ b/test.ipynb
@@ -150,9 +150,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "5 rows affected.\n",
-      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -160,15 +158,55 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>count</th>\n",
+       "        <th>user_id</th>\n",
+       "        <th>first_name</th>\n",
+       "        <th>last_name</th>\n",
+       "        <th>gender</th>\n",
+       "        <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>96</td>\n",
+       "        <td>66</td>\n",
+       "        <td>Kevin</td>\n",
+       "        <td>Arellano</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>51</td>\n",
+       "        <td>Maia</td>\n",
+       "        <td>Burke</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9</td>\n",
+       "        <td>Wyatt</td>\n",
+       "        <td>Scott</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>49</td>\n",
+       "        <td>Chloe</td>\n",
+       "        <td>Cuevas</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>94</td>\n",
+       "        <td>Noah</td>\n",
+       "        <td>Chavez</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(96,)]"
+       "[(66, 'Kevin', 'Arellano', 'M', 'free'),\n",
+       " (51, 'Maia', 'Burke', 'F', 'free'),\n",
+       " (9, 'Wyatt', 'Scott', 'M', 'free'),\n",
+       " (49, 'Chloe', 'Cuevas', 'F', 'free'),\n",
+       " (94, 'Noah', 'Chavez', 'M', 'free')]"
       ]
      },
      "execution_count": 4,
@@ -178,7 +216,7 @@
    ],
    "source": [
     "%sql SELECT * FROM users LIMIT 5;\n",
-    "%sql SELECT COUNT(*) FROM users;"
+    "#%sql SELECT COUNT(*) FROM users;"
    ]
   },
   {
