--- a/test.ipynb
+++ b/test.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -231,9 +231,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "71 rows affected.\n",
-      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -241,30 +239,70 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>count</th>\n",
+       "        <th>song_id</th>\n",
+       "        <th>title</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>year</th>\n",
+       "        <th>duration</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>71</td>\n",
+       "        <td>SOFSOCN12A8C143F5D</td>\n",
+       "        <td>Face the Ashes</td>\n",
+       "        <td>ARXR32B1187FB57099</td>\n",
+       "        <td>2007</td>\n",
+       "        <td>209.60608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOIAZJW12AB01853F1</td>\n",
+       "        <td>Pink World</td>\n",
+       "        <td>AR8ZCNI1187B9A069B</td>\n",
+       "        <td>1984</td>\n",
+       "        <td>269.81832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SONHOTT12A8C13493C</td>\n",
+       "        <td>Something Girls</td>\n",
+       "        <td>AR7G5I41187FB4CE6C</td>\n",
+       "        <td>1982</td>\n",
+       "        <td>233.40363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOCIWDW12A8C13D406</td>\n",
+       "        <td>Soul Deep</td>\n",
+       "        <td>ARMJAGH1187FB546F3</td>\n",
+       "        <td>1969</td>\n",
+       "        <td>148.03546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOQHXMF12AB0182363</td>\n",
+       "        <td>Young Boy Blues</td>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>0</td>\n",
+       "        <td>218.77506</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(71,)]"
+       "[('SOFSOCN12A8C143F5D', 'Face the Ashes', 'ARXR32B1187FB57099', 2007, 209.60608),\n",
+       " ('SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, 269.81832),\n",
+       " ('SONHOTT12A8C13493C', 'Something Girls', 'AR7G5I41187FB4CE6C', 1982, 233.40363),\n",
+       " ('SOCIWDW12A8C13D406', 'Soul Deep', 'ARMJAGH1187FB546F3', 1969, 148.03546),\n",
+       " ('SOQHXMF12AB0182363', 'Young Boy Blues', 'ARGSJW91187B9B1D6B', 0, 218.77506)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * FROM songs --LIMIT 5;\n",
-    "%sql SELECT COUNT(*) FROM songs;"
+    "%sql SELECT * FROM songs LIMIT 5;\n",
+    "#%sql SELECT COUNT(*) FROM songs;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -274,9 +312,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "5 rows affected.\n",
-      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -284,30 +320,70 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>count</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>name</th>\n",
+       "        <th>location</th>\n",
+       "        <th>latitude</th>\n",
+       "        <th>longitude</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>69</td>\n",
+       "        <td>ARXR32B1187FB57099</td>\n",
+       "        <td>Gob</td>\n",
+       "        <td></td>\n",
+       "        <td>None</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR8ZCNI1187B9A069B</td>\n",
+       "        <td>Planet P Project</td>\n",
+       "        <td></td>\n",
+       "        <td>None</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR7G5I41187FB4CE6C</td>\n",
+       "        <td>Adam Ant</td>\n",
+       "        <td>London, England</td>\n",
+       "        <td>None</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARMJAGH1187FB546F3</td>\n",
+       "        <td>The Box Tops</td>\n",
+       "        <td>Memphis, TN</td>\n",
+       "        <td>35.14968</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>JennyAnyKind</td>\n",
+       "        <td>North Carolina</td>\n",
+       "        <td>35.21962</td>\n",
+       "        <td>NaN</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(69,)]"
+       "[('ARXR32B1187FB57099', 'Gob', '', None, 'NaN'),\n",
+       " ('AR8ZCNI1187B9A069B', 'Planet P Project', '', None, 'NaN'),\n",
+       " ('AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', None, 'NaN'),\n",
+       " ('ARMJAGH1187FB546F3', 'The Box Tops', 'Memphis, TN', '35.14968', 'NaN'),\n",
+       " ('ARGSJW91187B9B1D6B', 'JennyAnyKind', 'North Carolina', '35.21962', 'NaN')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%sql SELECT * FROM artists LIMIT 5;\n",
-    "%sql SELECT COUNT(*) FROM artists;"
+    "#%sql SELECT COUNT(*) FROM artists;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -388,7 +464,7 @@
        " (datetime.datetime(2018, 11, 13, 5, 0, 6, 796000), 5, 13, 46, 11, 2018, 1)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
