changed some fields to not null, upsert instead py dict

--- a/test.ipynb
+++ b/test.ipynb
@@ -165,48 +165,48 @@
        "        <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>66</td>\n",
-       "        <td>Kevin</td>\n",
-       "        <td>Arellano</td>\n",
-       "        <td>M</td>\n",
-       "        <td>free</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>51</td>\n",
-       "        <td>Maia</td>\n",
-       "        <td>Burke</td>\n",
+       "        <td>53</td>\n",
+       "        <td>Celeste</td>\n",
+       "        <td>Williams</td>\n",
        "        <td>F</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>9</td>\n",
-       "        <td>Wyatt</td>\n",
-       "        <td>Scott</td>\n",
-       "        <td>M</td>\n",
-       "        <td>free</td>\n",
+       "        <td>82</td>\n",
+       "        <td>Avery</td>\n",
+       "        <td>Martinez</td>\n",
+       "        <td>F</td>\n",
+       "        <td>paid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>49</td>\n",
-       "        <td>Chloe</td>\n",
-       "        <td>Cuevas</td>\n",
+       "        <td>47</td>\n",
+       "        <td>Kimber</td>\n",
+       "        <td>Norris</td>\n",
        "        <td>F</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>94</td>\n",
-       "        <td>Noah</td>\n",
-       "        <td>Chavez</td>\n",
-       "        <td>M</td>\n",
+       "        <td>11</td>\n",
+       "        <td>Christian</td>\n",
+       "        <td>Porter</td>\n",
+       "        <td>F</td>\n",
        "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>30</td>\n",
+       "        <td>Avery</td>\n",
+       "        <td>Watkins</td>\n",
+       "        <td>F</td>\n",
+       "        <td>paid</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(66, 'Kevin', 'Arellano', 'M', 'free'),\n",
-       " (51, 'Maia', 'Burke', 'F', 'free'),\n",
-       " (9, 'Wyatt', 'Scott', 'M', 'free'),\n",
-       " (49, 'Chloe', 'Cuevas', 'F', 'free'),\n",
-       " (94, 'Noah', 'Chavez', 'M', 'free')]"
+       "[(53, 'Celeste', 'Williams', 'F', 'free'),\n",
+       " (82, 'Avery', 'Martinez', 'F', 'paid'),\n",
+       " (47, 'Kimber', 'Norris', 'F', 'free'),\n",
+       " (11, 'Christian', 'Porter', 'F', 'free'),\n",
+       " (30, 'Avery', 'Watkins', 'F', 'paid')]"
       ]
      },
      "execution_count": 4,
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -290,7 +290,7 @@
        " ('SOQHXMF12AB0182363', 'Young Boy Blues', 'ARGSJW91187B9B1D6B', 0, 218.77506)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -331,47 +331,47 @@
        "        <td>Gob</td>\n",
        "        <td></td>\n",
        "        <td>None</td>\n",
-       "        <td>NaN</td>\n",
+       "        <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>AR8ZCNI1187B9A069B</td>\n",
        "        <td>Planet P Project</td>\n",
        "        <td></td>\n",
        "        <td>None</td>\n",
-       "        <td>NaN</td>\n",
+       "        <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>AR7G5I41187FB4CE6C</td>\n",
        "        <td>Adam Ant</td>\n",
        "        <td>London, England</td>\n",
        "        <td>None</td>\n",
-       "        <td>NaN</td>\n",
+       "        <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>ARMJAGH1187FB546F3</td>\n",
        "        <td>The Box Tops</td>\n",
        "        <td>Memphis, TN</td>\n",
        "        <td>35.14968</td>\n",
-       "        <td>NaN</td>\n",
+       "        <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>ARGSJW91187B9B1D6B</td>\n",
        "        <td>JennyAnyKind</td>\n",
        "        <td>North Carolina</td>\n",
        "        <td>35.21962</td>\n",
-       "        <td>NaN</td>\n",
+       "        <td>nan</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('ARXR32B1187FB57099', 'Gob', '', None, 'NaN'),\n",
-       " ('AR8ZCNI1187B9A069B', 'Planet P Project', '', None, 'NaN'),\n",
-       " ('AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', None, 'NaN'),\n",
-       " ('ARMJAGH1187FB546F3', 'The Box Tops', 'Memphis, TN', '35.14968', 'NaN'),\n",
-       " ('ARGSJW91187B9B1D6B', 'JennyAnyKind', 'North Carolina', '35.21962', 'NaN')]"
+       "[('ARXR32B1187FB57099', 'Gob', '', None, nan),\n",
+       " ('AR8ZCNI1187B9A069B', 'Planet P Project', '', None, nan),\n",
+       " ('AR7G5I41187FB4CE6C', 'Adam Ant', 'London, England', None, nan),\n",
+       " ('ARMJAGH1187FB546F3', 'The Box Tops', 'Memphis, TN', 35.14968, nan),\n",
+       " ('ARGSJW91187B9B1D6B', 'JennyAnyKind', 'North Carolina', 35.21962, nan)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -464,7 +464,7 @@
        " (datetime.datetime(2018, 11, 13, 5, 0, 6, 796000), 5, 13, 46, 11, 2018, 1)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,15 +483,6 @@
     "## REMEMBER: Restart this notebook to close connection to `sparkifydb`\n",
     "Each time you run the cells above, remember to restart this notebook to close the connection to your database. Otherwise, you won't be able to run your code in `create_tables.py`, `etl.py`, or `etl.ipynb` files since you can't make multiple connections to the same database (in this case, sparkifydb)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
